<resources>
    <string name="font_awesome_regular" translatable="false">Font_Awesome_5_Free_Regular_400.otf</string>
    <string name="font_awesome_solid" translatable="false">Font Awesome 5 Free-Solid-900.otf</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCesIoc0UOvtKa4S4QrdtOEBFMm6dfInYE</string>
    <string name="Teecoin_notification_channel_id" translatable="false">TeeCoin_chanel_id</string>
    <string name="facebook_app_id" translatable="false">2327772820608221</string>
    <string name="google_client_id" translatable="false">1019747353212-g2lcjuecb99j8qg05a8bb60cdm6nt5q3.apps.googleusercontent.com</string>
    <string name="text_character" translatable="false">≈</string>
    <string name="text_percent" translatable="false">%</string>
    <string name="text_value_double" translatable="false">0.0</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_zero_tec" translatable="false">0.0 &TeeCoinSymbol;</string>
    <string name="text_time_zero" translatable="false">00:00</string>
    <string name="string_format_1" translatable="false">%s %s</string>
    <string name="string_format_5" translatable="false">≈ %s &TeeCoinSymbol;</string>
    <string name="string_format_6" translatable="false">%s = %s%s</string>
    <string name="time_format" translatable="false">%s\n%s</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="text_three_dot" translatable="false">...</string>
    <string name="text_facebook" translatable="false">Facebook</string>
    <string name="text_google" translatable="false">Google</string>
    <string name="filter_price_range_one_price" translatable="false">$</string>
    <string name="filter_price_range_two_price" translatable="false">$$</string>
    <string name="filter_price_range_three_price" translatable="false">$$$</string>
    <string name="filter_price_range_four_price" translatable="false">$$$$</string>
    <string name="filter_distance_500m" translatable="false">500M</string>
    <string name="filter_distance_1_km" translatable="false">1KM</string>
    <string name="filter_distance_1_5_km" translatable="false">1.5KM</string>
    <string name="filter_distance_2_km" translatable="false">2KM</string>
    <string name="filter_star_1" translatable="false">1</string>
    <string name="filter_star_2" translatable="false">2</string>
    <string name="filter_star_3" translatable="false">3</string>
    <string name="filter_star_4" translatable="false">4</string>
    <string name="filter_star_5" translatable="false">5</string>
    <string name="text_birthday_format" translatable="false">DD/MM/YYYY</string>
    <string name="count_all_discover" translatable="false">(%d)</string>
    <string name="text_addition" translatable="false">+%s</string>
    <string name="text_give_tec" translatable="false">%s\n &TeeCoinSymbol;</string>
    <string name="text_agoda" translatable="false">Agoda</string>
    <string name="text_usd" translatable="false">USD</string>
    <string name="text_sgd" translatable="false">SGD</string>
    <string name="version_app">Version</string>
    <string name="text_successful">Successful!</string>
    <string name="text_successfully">Successfully!</string>
    <string name="text_fail">Fail</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_read_more">Read more</string>
    <string name="text_more">More</string>
    <string name="text_please_enter">Please enter</string>
    <string name="text_please_enter_less_than_or_equal_100">Please enter less than or equal 100</string>
    <string name="text_please_enter_more_than_or_equal_one_percent">Please enter more than or equal 1%</string>
    <string name="text_closed">Closed</string>
    <string name="text_closes">Closes</string>
    <string name="text_close">Close</string>
    <string name="text_open">Open</string>
    <string name="text_opens">Opens</string>
    <string name="text_close_today">Closed Today</string>
    <string name="text_back_to_home">Back to home</string>
    <string name="text_back">Back</string>
    <string name="text_text">Text</string>
    <string name="text_content">content</string>
    <string name="text_description">description</string>
    <string name="text_buy_tee_coin">Buy &TeeCoinSymbol;</string>
    <string name="text_all">All</string>
    <string name="text_secret_key">Secret Key</string>
    <string name="text_scan_qr_code">SCAN QR CODE</string>
    <string name="text_view_my_qr_code">VIEW MY QR CODE</string>
    <string name="text_history">History</string>
    <string name="text_address">Address</string>
    <string name="text_wallet_address">Address</string>
    <string name="text_invoice_id">Invoice ID</string>
    <string name="text_fee">Fee</string>
    <string name="text_total_tec">Total &TeeCoinSymbol;</string>
    <string name="text_remaining_payment">Remaining Payment</string>
    <string name="text_transaction_config">Transaction Config</string>
    <string name="text_update">Update</string>
    <string name="text_details">Details</string>
    <string name="text_coin_back">Coinback</string>
    <string name="text_payment_threshold">Payment Threshold</string>
    <string name="text_set_passcode">Set Passcode</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_location">Location</string>
    <string name="text_catalogue">Catalogue</string>
    <string name="text_restaurant">Restaurants</string>
    <string name="text_reviews_uppercase">Reviews</string>
    <string name="text_reviews">reviews</string>
    <string name="text_promotions">Promotions</string>
    <string name="text_opening_hours">Opening Hours</string>
    <string name="text_open_24h">Open 24h</string>
    <string name="text_name">Name</string>
    <string name="text_coupon_what_are_you_searching">What are you searching for?</string>
    <string name="text_review">review</string>
    <string name="text_referral">Referral</string>
    <string name="text_parameter_with_tec">%s &TeeCoinSymbol;</string>
    <string name="text_referral_code">Referral Code</string>
    <string name="text_purchase">Purchase</string>
    <string name="text_inactive_users">Inactive Users</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_alert">Alert</string>
    <string name="text_message">Message</string>
    <string name="text_warning">Warning</string>
    <string name="text_reward">Reward</string>
    <string name="text_tip">Tip</string>
    <string name="text_done">Done</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_search">Search</string>
    <string name="text_coupon">Coupon</string>
    <string name="text_my_reviews">My Reviews</string>
    <string name="text_latest">Latest</string>
    <string name="text_popular">Popular</string>
    <string name="text_transactions">Transactions</string>
    <string name="text_coupons">Coupons</string>
    <string name="text_sort_by">Sort by</string>
    <string name="text_discount">Discount</string>
    <string name="text_less">Less</string>
    <string name="text_check_in">Check-in</string>
    <string name="text_check_in_lowercase">check-in</string>
    <string name="text_add_coupon">Add Coupon</string>
    <string name="text_coupon_for_free">Coupons For Free</string>
    <string name="text_balance">Balance</string>
    <string name="text_balance_with_colon">Balance:</string>
    <string name="text_receive">RECEIVE</string>
    <string name="text_setting">Settings</string>
    <string name="text_send">Send</string>
    <string name="text_copy_address">Copy secret key</string>
    <string name="text_your_qr_code">Your QR Code</string>
    <string name="text_50_minimum">%s/50 minimum</string>
    <string name="text_50_maximum">%s/26 maximum</string>
    <string name="text_payee">Payee</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_login">Log In</string>
    <string name="text_from_google">From Google</string>
    <string name="text_how_to_earn_tec">How to Earn TEC</string>
    <string name="text_other_outlet">%s other outlet</string>
    <string name="text_other_outlets">%s other outlets</string>
    <string name="text_got_it">Got It!</string>
    <string name="text_the_system_is_busy_try_agian">The system is busy. Please try again.</string>
    <string name="account_faq">FAQ</string>
    <string name="text_recovery_password">Recovery Password</string>
    <string name="text_new_merchant">New merchant</string>
    <string name="language_english">English</string>
    <string name="language_chinese_simplified">Chinese (Simplified)</string>
    <string name="language_chinese_tranditional">Chinese (Traditional)</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_vietnamese">Vietnamese</string>
    <string name="error_no_internet_connection">Sorry, we were unable to connect to the network. Please check your network connection.</string>
    <string name="error_request_time_out">Request timeout</string>
    <string name="error_text_contains_unsupported_encoding">Text contain unsupported encoding</string>
    <string name="location_service_title">Location Services disabled</string>
    <string name="location_service_message">%s needs access to your location in order to give you a better experiences. Please turn on Location Services in your device settings.\nGo to Settings> Apps> %s> Permissions> Turn ON Location </string>
    <string name="main_activity_tab_history">History</string>
    <string name="select_image_from_photo">Photo</string>
    <string name="select_image_from_video">Video</string>
    <string name="select_image_from_library">Library</string>
    <string name="todo">TODO</string>
    <string name="review_filter_choose_your_filter">Choose your filter</string>
    <string name="review_filter_sort_by_date">FILTER BY DATE</string>
    <string name="review_filter_5_stars">5 stars</string>
    <string name="review_filter_4_stars">4 stars</string>
    <string name="review_filter_3_stars">3 stars</string>
    <string name="review_filter_2_stars">2 stars</string>
    <string name="review_filter_1_star">1 star</string>
    <string name="review_filter_sort_date_newest_first">Newest First</string>
    <string name="review_filter_sort_date_oldest_first">Oldest First</string>
    <string name="review_filter_sort_rate_highest">Highest Rated</string>
    <string name="review_filter_sort_rate_lowest">Lowest Rated</string>
    <string name="review_filter_select_opening_times">Select opening hours</string>
    <string name="review_filter_near_me">Near me</string>
    <string name="filter_by_distance">FILTER BY DISTANCE</string>
    <string name="filter_5km">5km</string>
    <string name="filter_10km">10km</string>
    <string name="filter_20km">20km</string>
    <string name="coupon_my_coupons">My Coupons</string>
    <string name="add_notification">Add Notification</string>
    <string name="favourite">Favourite</string>
    <string name="recent">Recent</string>
    <string name="filter_by_rating">FILTER BY RATING</string>
    <string name="coupons_no_coupons_available">No coupons available</string>
    <string name="coupons_get_more_more_deals_on_chattee">Get More Deals on ChatTee’s catalogue!!</string>
    <string name="coupons_no_worries_start_shopping"><![CDATA[ No worries. Start shopping for <b>great deals &amp; <br/> exclusive </b>from other merchants.]]></string>
    <string name="sgd_wallet"> SGD Wallet</string>
    <string name="tec_wallet">TEC Wallet</string>
</resources>